GNOME Bugzilla – Bug 790797
Agent bug fixes
Last modified: 2017-11-26 16:16:18 UTC
.
Created attachment 364346 [details] [review] lib: Ignore "org.bluez.Error.DoesNotExist" error when unregistering That means that the agent was never registered. You could achieve this by: - bluetoothd is running, launch an agent - kill and restart bluetoothd - kill the agent - unregister() fails with: Agent unregistration failed: GDBus.Error:org.bluez.Error.DoesNotExist: Does Not Exist 'g-io-error-quark'
Created attachment 364347 [details] [review] lib: Use GDBusConnection rather than for_bus variants We already have a GDBusConnection in our private struct, so we don't need to use "for_bus" variants.
Created attachment 364348 [details] [review] lib: Fix agent registration when bluetoothd comes and goes Use our watch for org.bluez appearing and vanishing to register our agent. There's no need to try and call out to org.bluez if the daemon isn't around. We'll register when both org.bluez is set, and _register() has been called.
Review of attachment 364346 [details] [review]: Looks good
Review of attachment 364347 [details] [review]: Makes sense
Review of attachment 364348 [details] [review]: Cool, might fix some weird issues.
Attachment 364346 [details] pushed as 2c6d78c - lib: Ignore "org.bluez.Error.DoesNotExist" error when unregistering Attachment 364347 [details] pushed as 5423ea0 - lib: Use GDBusConnection rather than for_bus variants Attachment 364348 [details] pushed as 491f454 - lib: Fix agent registration when bluetoothd comes and goes