lib: Ignore "org.bluez.Error.DoesNotExist" error when unregistering

That means that the agent was never registered. You could achieve this
by:
- bluetoothd is running, launch an agent
- kill and restart bluetoothd
- kill the agent
- unregister() fails with:
Agent unregistration failed: GDBus.Error:org.bluez.Error.DoesNotExist: Does Not Exist 'g-io-error-quark'

https://bugzilla.gnome.org/show_bug.cgi?id=790797